--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
     "eslint-config-airbnb": "^19.0.4"
   },
   "dependencies": {
+    "@fullcalendar/core": "^6.1.4",
+    "@fullcalendar/daygrid": "^6.1.4",
+    "@fullcalendar/interaction": "^6.1.4",
     "bcrypt": "^5.1.0",
     "connect-session-sequelize": "^7.1.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.2",
     "express-session": "^1.17.3",
+    "fullcalendar": "^6.1.4",
     "handlebars": "^4.7.6",
     "mysql2": "^3.2.0",
     "sequelize": "^6.29.2"
