--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.18.2",
     "express-handlebars": "^7.0.2",
     "express-session": "^1.17.3",
+    "fullcalendar": "^6.1.4",
     "handlebars": "^4.7.6",
     "mysql2": "^3.2.0",
     "sequelize": "^6.29.2"
